--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
-
+  
+  <img src="">
+  <img alt="abc">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion" title="Roar!">
 </body>
 </html>
