--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   
   <img src="">
   <img alt="abc">
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion" title="Roar!">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion" title="Is this a roar or a yawn?">
 </body>
 </html>
