--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-  <img src="">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
   <img alt="abc">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion" title="Is this a roar or a yawn?">
   
