Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
-  <img alt="abc">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="abc">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion" title="Is this a roar or a yawn?">
   
 </body>
