--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
-
+  
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="abc">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion" title="Is this a roar or a yawn?">
+  
 </body>
 </html>
